# UnifiedPresentationSystem

./: .gitignore  .polyscope.ini  CMakeLists.txt  LICENSE  README.md  imgui.ini  new_project.sh  slope.cmake  template_project.cpp
.cache/clangd/index/: CameraView.cpp.1DCC4861F8BB961A.idx  CameraView.h.9517BAD37FDC5821.idx  Curve2D.cpp.6320531D5E820673.idx  Curve2D.h.2F0599CBA6D922ED.idx  Curve3D.cpp.8E14D376B0F84068.idx  Curve3D.h.3225B94A742B184C.idx  FontManager.cpp.A014DA38122820C4.idx  FontManager.h.09A5A711BCC4F77B.idx  Image.cpp.83C490FDB72F3ECE.idx  Image.h.4465B0714A8053A9.idx  LateX.cpp.C072218A1697400F.idx  LateX.h.7E396236BE9781FD.idx  Mesh.cpp.83648F7C17B330D7.idx  Mesh.h.EBA21A534769A06E.idx  Placement.cpp.4FE36880D2C241E1.idx  Placement.h.790C14E8A2EC7D03.idx  Plot.cpp.8A35D74C27606EC3.idx  Plot.h.36695E39BED1B770.idx  Point.cpp.137A9CBC144F1B69.idx  Point.h.EBA8F3BA21E8D2C8.idx  PointCloud.cpp.C81EDF8D22B65CA8.idx  PointCloud.h.5996C60317D5AFAB.idx  PolyscopePrimitive.cpp.0389EE19924C891A.idx  PolyscopePrimitive.h.EBF51624895E576A.idx  Prompter.cpp.C7C56EA92343A4ED.idx  Prompter.h.135904E3A5603900.idx  Section.cpp.483C1A1DF5D7D61D.idx  Section.h.032D35F8858B86CD.idx  Slide.cpp.27F205F09CE127EB.idx  Slide.h.7EC706CFCFAD6C6C.idx  Sliders.cpp.15456727D927B89C.idx  Sliders.h.BCEC14A60CA17A76.idx  Slideshow.cpp.845777F5A9B66E6F.idx  Slideshow.h.D4AE69D1FD3492DD.idx  Style.cpp.228AFE6E006CB926.idx  Style.h.55A1CCAE3402F5A3.idx  Text.cpp.93B86C27D1DBE085.idx  Text.h.323AE17B76F9CEAE.idx  TimeObject.cpp.207B193C9170F273.idx  TimeObject.h.CC4E7ADB474D51DD.idx  (+11 more)
.github/workflows/: cmake.yml
UPS/: CMakeLists.txt  UPS.h  UnifiedPresentationSystem.h  Widget.cpp  Widget.h  WidgetManager.cpp  WidgetManager.h  imgui_main.cpp
UPS/cmake/: polyscope.cmake
UPS/content/: AssetManager.h  CameraView.cpp  CameraView.h  Curve3D.cpp  Curve3D.h  Image.cpp  Image.h  LateX.cpp  LateX.h  Mesh.cpp  Mesh.h  Placement.h  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  PolyscopePrimitive.cpp  PolyscopePrimitive.h  Sliders.h  Text.cpp  Text.h  TimeObject.cpp  TimeObject.h  io.h  primitive.cpp  primitive.h
UPS/content/Graphics2D/: Curve2D.cpp  Curve2D.h
UPS/math/: geometry.h  kernels.h
UPS/slides/: Prompter.cpp  Prompter.h  Section.h  Slide.cpp  Slide.h  SlideObject.h  Slideshow.cpp  Slideshow.h  prompter.cpp  prompter.h
UPS/style/: FontManager.cpp  Style.cpp  Style.h
cmake/: SlopeConfig.cmake.in  eigen.cmake  polyscope.cmake  spdlog.cmake
data/lateX/: formula.tex  text.tex
projects/BSPOT/: latex.json  main.cpp
projects/BSPOT/slides/: bspot.cpp  bspot.h  bspot_slides.h  intro.cpp  intro.h
projects/BSPOT/views/: authors.pos  ot_definition.pos  ot_problem.pos  teaser.pos  title.pos
projects/NESOTS/: fibo.pts  good.pts  main.cpp  mu_1.pts  mu_2.pts  mu_3.pts  mu_layout_1.pts  mu_layout_2.pts  mu_layout_3.pts  plot.py
projects/NESOTS/data/: NESOTS.data  superfibo.data
projects/NESOTS/views/: 1DOT.json  ANR.pos  GMD.pos  H2.pos  Log.pos  OT.json  R3.pos  RGD.pos  S2.pos  SGD.pos  U.pos  W2.pos  advect.pos  bonjour.json  cartesian.pos  ccl_teaser1.pos  ccl_teaser2.pos  ccl_teaser3.pos  close_grad.json  cnrs.pos  cursor0.pos  cursor1.pos  cursor2.pos  cursor3.pos  cursor4.pos  cursor_0.pos  density_on_sphere.pos  dir.pos  discrete.pos  discrete_mu.pos  duck.pos  f_def.pos  fibo.pos  follow_u.pos  generic.pos  geomed.pos  geomed2.pos  grad.pos  grad_optim.pos  group_action.pos  (+28 more)
projects/course_MG/: main.cpp
projects/dev/: main.cpp  test.json
projects/dev/views/: test.pos  test2.pos  testplot.pos
projects/implicit_uvs/: CSG.pngZone.Identifier  implicit_uvs_slides.h  main.cpp  moving_old.cpp  new_slide.sh  slide_template.cpp
projects/implicit_uvs/slides/: atlas_computation.cpp  compact_support.cpp  conclusion.cpp  context.cpp  curve_based.cpp  details.cpp  expmap.cpp  intro.cpp  logmap.cpp  merging_fields.cpp  moving.cpp  mutliple_seeds.cpp  sphere_tracing.cpp
projects/implicit_uvs/views/: 90_rotation.pos  M0.pos  O1.pos  TM0.pos  advantages.pos  advantages2.pos  advantages3.pos  approx_log.pos  atlas.json  band_weight.pos  benefits.pos  bunny_hair.pos  connec.pos  constraints.pos  csg.pos  details.pos  diff_estim.pos  discretization.pos  displacement.json  euc_dvij.json  exp_map.pos  expensive.pos  explicit_expm.pos  frame_energy.pos  gamma_cords.pos  geo_dist.pos  geo_voronoï.pos  graph_editing.pos  impl.pos  impl_decals.pos  impl_formula_1.pos  impl_formula_2.pos  kernel_techniques_img.pos  legend.pos  log_map2.pos  log_y1.pos  logmap_heuristic.json  merging_fields.json  (+40 more)
projects/implicit_uvs_simple/: batou2.jpgZone.Identifier  main.cpp  move_seed_crop.gifZone.Identifier  test.json  text.json
projects/minimal_surf/: catenoid.json  main.cpp
projects/tutorials/: tuto1.cpp  tuto2.cpp  tuto_helloworld.cpp  tuto_mesh.cpp
scripts/: course_MG.txt  eqn.tex  equation.tex  equation_glyphs.json  equation_glyphs2.json  latex_to_glyphs.py  latex_to_glyphs2.py  latex_to_glyphs3.py  tex_glyphs.py
slides/: DDG.cpp  course_MG.cpp
src/: UPS.h  UnifiedPresentationSystem.h  libslope.h  slope.h
src/cmake/: geometry-central.cmake  polyscope.cmake
src/content/: Anchor.cpp  Anchor.h  BackgroundColor.h  CameraView.cpp  CameraView.h  Curve3D.cpp  Curve3D.h  Image.cpp  Image.h  LateX.cpp  LateX.h  LateXMacros.h  Mesh.cpp  Mesh.h  Options.cpp  Options.cpp.in  Options.h  Placement.cpp  Placement.h  Plot.cpp  Plot.h  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  PolyscopePrimitive.cpp  PolyscopePrimitive.h  PrimitiveGroup.cpp  PrimitiveGroup.h  Referential.cpp  Referential.h  ScreenPrimitive.cpp  ScreenPrimitive.h  Sliders.cpp  Sliders.h  StateInSlide.cpp  StateInSlide.h  Text.cpp  Text.h  TimeObject.h  (+10 more)
src/math/: Parametrization.cpp  Parametrization.h  geometry.h  kernels.h  utils.h
src/slides/: CLI.cpp  CLI.h  Panel.h  Prompter.cpp  Prompter.h  PrompterModule.cpp  PrompterModule.h  Section.h  Slide.cpp  Slide.h  SlideManager.cpp  SlideManager.h  Slideshow.cpp  Slideshow.h  screenshot.cpp  screenshot.h
src/style/: FontManager.cpp  FontManager.h  Style.cpp  Style.h
(+138 files in other folders)
